Remove JVM version dependent GC setting handling
We require 11+, so we no longer need to handle <= 1.8 style GC flags